--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -142,7 +142,7 @@
                                     <div class="uk-width-1-2@m uk-position-relative">
                                         <div class="titulo-respuesta-ordenar">#{alumno['activities.title.match.sentence.answer']}</div>
                                         <ui:repeat value="#{relacionarOracionControlador.tareaRelacionarOracionModeloLista}" var="relacionarOracion" varStatus="cont">
-                                            <h:panelGroup  id="cont#{cont.index}" layout="block" styleClass="respuestas-ordenar-lista x-panel-ghost" pt:ondrop="drop(event, this)" pt:ondragover="allowDrop(event)" >
+                                            <h:panelGroup  id="cont#{cont.index}" layout="block" styleClass="respuestas-ordenar-lista " pt:uk-sortable="group: match-activity" pt:data-indice="#{cont.index}">
                                                 <h:panelGroup layout="block" rendered="#{not empty relacionarOracionControlador.tareaRelacionarOracionModeloLista[cont.index].respuesta}" styleClass="respuesta">
                                                     #{relacionarOracionControlador.respuestaVal(relacionarOracionControlador.tareaRelacionarOracionModeloLista[cont.index].respuesta)}
                                                 </h:panelGroup>
@@ -154,17 +154,15 @@
                                 <h:panelGroup id="tablaRespuestas"
                                               layout="block"
                                               styleClass="respuestas-ordenar scroll-drag"
-                                              pt:ondrop="drop(event, this)"
-                                              pt:ondragover="allowDrop(event)" rendered="#{empty relacionarOracionControlador.tareaRelacionarOracionModeloLista[0].respuesta}">
+                                              pt:uk-sortable="group: match-activity"
+                                               rendered="#{empty relacionarOracionControlador.tareaRelacionarOracionModeloLista[0].respuesta}">
                                     <ui:repeat value="#{relacionarOracionControlador.desordenaLista(relacionarOracionControlador.tareaRelacionarOracionModeloLista)}" var="preRespuestas" varStatus="resp">
                                         <h:panelGroup id="resp#{resp.index}"
                                                       layout="block"
-                                                      styleClass="respuesta x-panel-ghost"
+                                                      styleClass="respuesta "
+                                                      pt:data-index="#{resp.index}"
                                                       pt:data-id="#{preRespuestas.relacionarOracionModelo.id}"
-                                                      pt:draggable="true"
-                                                      pt:ondragstart="drag(event)"
-                                                      pt:ondrop="return false"
-                                                      pt:ondragover="return false">
+                                                      >
                                             #{preRespuestas.relacionarOracionModelo.respuesta}
                                         </h:panelGroup>
                                     </ui:repeat>
@@ -364,7 +362,10 @@
         </script>
         <h:outputScript library="js" name="alumno/transcripcion.js"/>
         <h:outputScript library="js" name="alumno/activity.js"/>
-        <h:outputScript library="js" name="/alumno/drag-drop.js"/>
+    </ui:define>
+    <ui:define name="enlaces-js">
+        <h:outputScript library="js" name="/alumno/drag-prueba.js"/>
+        <h:outputScript library="js" name="/alumno/match-activity.js"/>
     </ui:define>
 </ui:composition>
 </html>
