--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -52,7 +52,7 @@
                                         <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
                                             <div class="uk-width-expand">
                                                 <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
-                                                <span class="cat-txt">90</span>
+                                                <span class="cat-txt ">#{actividadModelo.nivelLenguaje}</span>
                                             </div>
                                             <div class="uk-width-auto uk-text-right uk-text-muted">
                                                 <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>90
@@ -69,32 +69,33 @@
                                     </div>
                                     <div class="uk-card-body tecolotl-card">
                                         <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
-                                        <p class="uk-text-small uk-text-muted ">#{actividadModelo.nivelLenguaje}</p>
                                     </div>
                                     <div class="uk-card-footer">
                                         <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
-                                            <div class="uk-width-auto uk-text-small text-color-level1 uk-text-bold">
+                                            <div class="uk-width-1-1@m uk-text-small text-color-level1 uk-text-bold">
                                                 <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
-                                                    <div><h:graphicImage pt:data-uk-tooltip="title: Download" styleClass="uk-icon-image uk-svg" library="img" name="icono/escuela.svg" /></div>
-                                                    <div><h:graphicImage pt:data-uk-tooltip="title: Didactic Guide" styleClass="uk-icon-image uk-svg" library="img" name="icono/decarga.svg" /></div>
+                                                    <div><h:outputLink pt:data-uk-tooltip="title: Download"  value="../resources/descargables/#{actividadModelo.idActividad}.pdf" target="_blank"><h:graphicImage styleClass=" uk-svg" library="img" name="icono/escuela.svg" pt:uk-svg=""/></h:outputLink></div>
+                                                    <div><h:outputLink pt:data-uk-tooltip="title: Didactic Guide"  value="../resources/guia/#{actividadModelo.idActividad}.pdf" target="_blank" ><h:graphicImage  styleClass=" uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></h:outputLink></div>
                                                 </h:panelGroup>
                                             </div>
-                                            <div class="uk-width-expand ">
-                                                <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
-                                                    <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg" /></div>
-                                                    <div>
-                                                        <h:form>
-                                                            <h:commandLink pt:uk-toggle="#modal-transcript" >
-                                                                <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
-                                                                <f:ajax listener="#{actividadControlador.buscaTranscripcion(actividadModelo)}" render="transcripcion" />
-                                                            </h:commandLink>
-                                                        </h:form>
-                                                    </div>
-                                                    <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" /></div>
-                                                    <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" /></div>
-                                                    <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" /></div>
-                                                </h:panelGroup>
-                                            </div>
+                                            <ui:remove>
+                                                <div class="uk-width-expand ">
+                                                    <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg" /></div>
+                                                        <div>
+                                                            <h:form>
+                                                                <h:commandLink pt:uk-toggle="#modal-transcript" >
+                                                                    <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
+                                                                    <f:ajax listener="#{actividadControlador.buscaTranscripcion(actividadModelo)}" render="transcripcion" />
+                                                                </h:commandLink>
+                                                            </h:form>
+                                                        </div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" /></div>
+                                                    </h:panelGroup>
+                                                </div>
+                                            </ui:remove>
                                         </h:panelGroup>
                                     </div>
                                 </div>
