--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -17,7 +17,7 @@
         </ui:define>
         <ui:define name="contenido">
             <h:outputStylesheet library="css" name="navegacion.css"/>
-            <h:outputStylesheet library="css" name="/profesor/biblioteca-profesor.css"/>
+            <h:outputStylesheet library="css" name="profesor/biblioteca-profesor.css"/>
             <h:outputStylesheet library="css" name="profesor/scroll-profesor.css"/>
             <div class="uk-container" data-uk-filter="target: .js-filter">
                 <div class="uk-width-1-1@m uk-margin-medium-top">
@@ -38,14 +38,18 @@
                 <div class="uk-margin-medium-top uk-flex uk-flex-right">
                     <h:form id="formulario-asignar-tarea">
                         <h:inputHidden id="input-actividad" value="#{asignarActividadControlador.actividad}"/>
-                        <h:commandButton value="Asignar" styleClass="uk-button  uk-button-primary uk-border-rounded" onclick="return buscaActividadSeleccionada(event)">
-                            <f:ajax execute="@form" listener="#{asignarActividadControlador.asiganarTarea()}" render="@none"/>
+                        <h:commandButton id="boton-enviar"
+                                         action="#{asignarActividadControlador.asiganarTarea()}"
+                                         value="Asignar" styleClass="uk-button  uk-button-primary uk-border-rounded"
+                                         style="display: none">
                         </h:commandButton>
                     </h:form>
+                    <h:button value="regresar" styleClass="uk-button uk-margin-small-right" outcome="dashboard"/>
+                    <button class="uk-button uk-border-rounded" onclick="buscaActividadSeleccionada(event)">Asignar</button>
                 </div>
                 <ul  class="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" uk-grid="">
                     <ui:repeat value="#{asignarActividadControlador.actividadModeloLista}" var="actividadModelo">
-                        <li class="#{actividadModelo.nivelLenguaje}" data-tags="#{actividadModelo.preguntaDetonadora.toLowerCase()}" data-actividad="#{actividadModelo.idActividad}">
+                        <li class="#{actividadModelo.nivelLenguaje}" data-tags="#{actividadModelo.preguntaDetonadora.toLowerCase()}">
                             <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguaje}"  >
                                 <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border">
                                     <div class="uk-card-header border-card">
