estilos a los cards con pregunta detonadora y video

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -95,8 +95,8 @@
                                <div class="uk-card-media-top uk-text-center" data-video="#{tareaActvidadModelo.idActividad}">
                                    <h:panelGroup layout="block" pt:uk-spinner=""/>
                                    <div  class="uk-inline-clip uk-transition-toggle" tabindex="0">
-                                       <div class="uk-h4 uk-margin-remove posicion">
-                                           <span><h:outputText  value="#{tareaActvidadModelo.preguntaDetonadora}"/></span>
+                                       <div class="uk-margin-remove posicion">
+                                           <h:outputText  value="#{tareaActvidadModelo.preguntaDetonadora}"/>
                                        </div>
                                        <div class="uk-transition-fade uk-position-cover uk-overlay-default uk-flex uk-flex-center uk-flex-middle">
                                            <h:panelGroup layout="block" styleClass="uk-inline" pt:uk-lightbox="">
