--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -64,9 +64,11 @@
                 </div>
             </div>
         </div>
-        <h:button value="regresar" outcome="tablero"/>
-        <button class="boton-escuadron-base reporte">reporte</button>
-        <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
+        <div>
+            <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
+            <button class="boton-escuadron-base reporte">reporte</button>
+            <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
+        </div>
         <div class="uk-grid uk-grid-medium uk-margin-large-bottom" data-uk-grid="">
             <!-- tabla alumnos -->
             <div class="uk-width-1-1@s">
