Reporte de actividades listo para pruebas

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -66,7 +66,7 @@
         </div>
         <div>
             <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
-            <button class="boton-escuadron-base reporte">reporte</button>
+            <button class="boton-escuadron-base reporte" data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}" data-grado="#{profesorGrupoControlador.grupoModelo.grado}">reporte</button>
             <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
         </div>
         <div class="uk-grid uk-grid-medium uk-margin-large-bottom" data-uk-grid="">
@@ -89,32 +89,38 @@
                             <h:column>
                                 <f:facet name="header"><span class="letra-tabla uk-text-bold">mapa mental</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="${tarea.totalAsignadaMapaMental eq 0}"/>
-                                <span><h:outputText value="${tarea.totalRespuestaMapaMental} / ${tarea.totalAsignadaMapaMental} / ${tarea.calificadoMapaMental}" rendered="${tarea.totalAsignadaMapaMental ne 0}"/></span>
+                                <span><h:outputText value="${tarea.totalRespuestaMapaMental}" rendered="${tarea.totalAsignadaMapaMental ne 0}"/></span>
+                                <h:outputText value="/ ${tarea.totalAsignadaMapaMental} / ${tarea.calificadoMapaMental}" rendered="${tarea.totalAsignadaMapaMental ne 0}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header"><span class="letra-tabla uk-text-bold">ordenar palabra</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="${tarea.totalAsignadaGramatica eq 0}"/>
-                                <span><h:outputText value="${tarea.totalRespuestaGramatica} / ${tarea.totalAsignadaGramatica} / ${tarea.totalCalificadasGramatica}" rendered="${tarea.totalAsignadaGramatica ne 0}"/></span>
+                                <span><h:outputText value="${tarea.totalRespuestaGramatica}" rendered="${tarea.totalAsignadaGramatica ne 0}"/></span>
+                                <h:outputText value=" / ${tarea.totalAsignadaGramatica} / ${tarea.totalCalificadasGramatica}" rendered="${tarea.totalAsignadaGramatica ne 0}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header"><span class="letra-tabla uk-text-bold">relacionar imagen palabra</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="${tarea.totalAsignadoRelacionar eq 0}"/>
-                                <span><h:outputText value="${tarea.totalRespuestaRelacionar} / ${tarea.totalAsignadoRelacionar}" rendered="${tarea.totalAsignadoRelacionar ne 0}"/></span>
+                                <span><h:outputText value="${tarea.totalRespuestaRelacionar}" rendered="${tarea.totalAsignadoRelacionar ne 0}"/></span>
+                                <h:outputText value=" / ${tarea.totalAsignadoRelacionar}" rendered="${tarea.totalAsignadoRelacionar ne 0}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header"><span class="letra-tabla uk-text-bold">ordenar oraciones</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="#{tarea.totalAsignadaOraciones eq 0}"/>
-                                <span><h:outputText value="#{tarea.totalRespuestaOraciones} / #{tarea.totalAsignadaOraciones}" rendered="#{tarea.totalAsignadaOraciones ne 0}"/></span>
+                                <span><h:outputText value="#{tarea.totalRespuestaOraciones}" rendered="#{tarea.totalAsignadaOraciones ne 0}"/></span>
+                                <h:outputText value=" / #{tarea.totalAsignadaOraciones}" rendered="#{tarea.totalAsignadaOraciones ne 0}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header"><span class="letra-tabla uk-text-bold">relacionar pregunta respuesta</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="${tarea.totalAsignadaRelacionarOracion eq 0}"/>
-                                <span><h:outputText value="${tarea.totalRespuestaRelacionarOracion} / ${tarea.totalAsignadaRelacionarOracion}" rendered="${tarea.totalAsignadaRelacionarOracion ne 0}"/></span>
+                                <span><h:outputText value="${tarea.totalRespuestaRelacionarOracion}" rendered="${tarea.totalAsignadaRelacionarOracion ne 0}"/></span>
+                                <h:outputText value=" / ${tarea.totalAsignadaRelacionarOracion}" rendered="${tarea.totalAsignadaRelacionarOracion ne 0}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header"><span class="letra-tabla uk-text-bold">completar oraciones</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="${tarea.totalAsignadaCompletar eq 0}"/>
-                                <span><h:outputText value="${tarea.totalRespuestaCompletar} / ${tarea.totalAsignadaCompletar}" rendered="${tarea.totalAsignadaCompletar ne 0}"/></span>
+                                <span><h:outputText value="${tarea.totalRespuestaCompletar}" rendered="${tarea.totalAsignadaCompletar ne 0}"/></span>
+                                <h:outputText value=" / ${tarea.totalAsignadaCompletar}" rendered="${tarea.totalAsignadaCompletar ne 0}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header"><span class="letra-tabla uk-text-bold">Opciones</span></f:facet>
