--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="botones">
             <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
             <button class="boton-escuadron-base reporte" data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}" data-grado="#{profesorGrupoControlador.grupoModelo.grado}">reporte</button>
             <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
