--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -63,12 +63,13 @@
                     </div>
                 </div>
             </div>
+            <div class="botones uk-width-2-3@m">
+                <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
+                <button class="boton-escuadron-base reporte" data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}" data-grado="#{profesorGrupoControlador.grupoModelo.grado}">reporte</button>
+                <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
+            </div>
         </div>
-        <div class="botones">
-            <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
-            <button class="boton-escuadron-base reporte" data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}" data-grado="#{profesorGrupoControlador.grupoModelo.grado}">reporte</button>
-            <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
-        </div>
+
         <div class="uk-grid uk-grid-medium uk-margin-large-bottom" data-uk-grid="">
             <!-- tabla alumnos -->
             <div class="uk-width-1-1@s">
